# job-sentry

./: .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOY_ORACLE.md
job_sentry/: __init__.py  app.py  browser.py  config.py  copilot.py  dashboard.py  emails.py  filters.py  models.py  resume.py  scraper.py  store.py
tests/: conftest.py  test_app.py  test_browser.py  test_copilot.py  test_emails.py  test_filters.py  test_resume.py  test_scraper.py
