[project]
name = "job-sentry"
version = "0.1.0"
description = "JobSentry — Semi-Autonomous AI Job Application Copilot (Human-in-the-Loop)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Lucas Maingi", email = "maingilucas0@gmail.com"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "pandas"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint.flake8-bugbear]
# Depends()/Query()/Security() in argument defaults is the idiomatic FastAPI
# dependency-injection pattern, not the B008 anti-pattern.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security", "fastapi.Header", "fastapi.File", "fastapi.Form"]
